tests/NormalTests/paczka1/fuzzy1/11603715.err
Error in line 2: S814 A177 88,2
Error in line 19: sYGvpPnoY S696 45,2
Error in line 21: VLCiJVE A817 53,4
Error in line 26: VLCiJVE S696 49,8
Error in line 30: 7PSnQ3QMK S696 49,41
